app/components/navBar.module.css
.link {
  text-decoration: none;
  color: inherit;
}
.logo {
  color: rgb(14, 107, 51);
}
.header {
  margin: 0;
  padding: 0;
  outline: none;
  box-sizing: border-box;
  font-family: "Reddit Mono", monospace;
}
.sticky {
  position: sticky;
  top: 0;
}
.nav {
  display: flex;
  padding: 16px;
  justify-content: space-between;
  align-items: center;
  background-color: rgb(223, 222, 222);
  box-shadow: 5px 0px 10px 2px #888888;
}
.nav__menubar {
  display: flex;
  flex-direction: column;
  row-gap: 6px;
  cursor: pointer;
}
.nav__menubar div {
  width: 40px;
  height: 4px;
  background-color: black;
  border-radius: 2px;
}
.nav__menulist {
  display: flex;
  flex-direction: column;
  position: fixed;
  top: 60px;
  width: 288px;
  row-gap: 24px;
  right: -288px;
  padding: 24px 16px;
  transition: all 0.2s;
  min-height: calc(100vh - 60px);
  background-color: rgb(223, 222, 222);
}
.nav__menulist.active {
  right: 0;
}
.nav__link {
  font-size: 18px;
  position: relative;
  transition: all 0.2s;
}

.nav__link:hover {
  font-weight: bold;
}

.center {
  min-height: 600px;
  display: flex;
  justify-content: center;
  align-items: center;
}

@media screen and (min-width: 768px) {
  .nav__menubar {
    display: none;
  }
  .nav__menulist {
    position: unset;
    flex-direction: row;
    min-height: fit-content;
    width: fit-content;
    column-gap: 24px;
    align-items: center;
  }
  .nav__link::before {
    content: "";
    position: absolute;
    width: 0%;
    height: 6px;
    bottom: -16px;
    left: 0;
    background-color: black;
    transition: all 0.2s;
  }

  .nav__link:hover:before {
    width: 100%;
  }
}

